--- a/package.yaml
+++ b/package.yaml
@@ -14,7 +14,9 @@ category:            Fun
 description:         Please see the README on GitHub at <https://github.com/nahilhumot/game-of-life>
 dependencies:
 - base >= 4.7 && < 5
+- mtl >= 2.2 && < 3
 - random >= 1.1 && < 2
+- stm >= 2.5 && < 3
 - vector >= 0.12 && < 1
 
 library:
