--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ dependencies:
 - random >= 1.1 && < 2
 - stm >= 2.5 && < 3
 - vector >= 0.12 && < 1
+- vty >= 5.25 && < 6
 
 library:
   source-dirs: src
