--- a/package.yaml
+++ b/package.yaml
@@ -28,5 +28,9 @@ executables:
   game-of-life-exe:
     main:                Main.hs
     source-dirs:         app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     dependencies:
     - game-of-life
