Use more efficienct bytestring builders

--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ dependencies:
 - mtl >= 2.2 && < 3
 - random >= 1.1 && < 2
 - stm >= 2.5 && < 3
+- text >= 1.2 && < 2
 - vector >= 0.12 && < 1
 - vty >= 5.25 && < 6
 
